# Fasttok

./: .gitignore  LICENSE  MANIFEST.in  README.md  fasttok_dashboard.py  gpt4_comparison.py  openai_real_usage.py  pyproject.toml  setup.py
.github/workflows/: build_and_publish.yml  tests.yml
fasttok/: __init__.py  __init__.pyi
src/: compressor.hpp  main.cpp  tokenizer.hpp
tests/: test_fasttok.py
